--- a/templates/project_content/home.html
+++ b/templates/project_content/home.html
@@ -48,18 +48,18 @@
                 
             </table>
         {% endif %}
-     </div>
+    </div>
 
-{#     <div class="linkholder">  #}
-{#        <a href="{% url 'my_distance_view' %}"> Calculate distances</a> #}
-{##}
-{#    </div>#}
+    <div class="linkholder">  
+        <a href="{% url 'my_distance_view' %}"> Calculate distances</a> 
+
+    </div>
 
 {#    <div class="linkholder">  #}
 {#        <a href="{% url 'my_map_view' %}"> Go to the map</a> #}
 {##}
 {#    </div>#}
-
+{##}
 
 
 </div>
