--- a/templates/project_content/home.html
+++ b/templates/project_content/home.html
@@ -8,11 +8,12 @@
         
     </div>
 
-
     <div class="linkholder">
+    
         {% if mydata.count == 0 %}
             <div> No data available </div>
         {% else %}
+            
             <table id="ourtable3" class="myTable m-3">
                 <thead>
                     <tr>
@@ -29,7 +30,9 @@
                 </thead>
 
                 <tbody>
+                
                     {% for a in mydata %}
+                        
                     <tr>
                         <td> {{a.id}} </td>
                         <td> {{a.name}} </td>
@@ -39,7 +42,6 @@
                         <td> {{a.city}} </td>
                         <td> {{a.country}} </td>
                         <td> <a href="{% url 'my_geocoding_view' a.id %}"> Geocode!</a> </td>
-                       
                     </tr>
 
                     {% endfor%}
@@ -51,18 +53,13 @@
     </div>
 
     <div class="linkholder">  
-        <a href="{% url 'my_distance_view' %}"> Calculate distances</a> 
-
+        <a href="{% url 'my_distance_view' %}"> Calculate distances</a>
     </div>
 
-{#    <div class="linkholder">  #}
-{#        <a href="{% url 'my_map_view' %}"> Go to the map</a> #}
-{##}
-{#    </div>#}
-{##}
-
+    <div class="linkholder">  
+        <a href="{% url 'my_map_view' %}"> Go to the map</a>
+    </div>
 
 </div>
-
-
+    
 {% endblock %}
